# P-Cmax-solver

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  cobertura.xml  kissat  state_checker.py
.github/workflows/: coverage.yml  test.yml
bench/: compare.py  plot1v1.py  prepare_cumulative_tests.py  run_benchmarks.py  run_encoding_benchmarks.py  run_unsatness_benchmarks.py
bench/class_instances/: README.md  generate-benchmark-suite.sh  generate-single-benchmark.py  validate-solution.py
bench/cnf/: p_cmax-n1010-m100-mchess16-mixed-45percent-blocked.cnf.raw.txt  p_cmax-n1010-m20-mchess16-mixed-45percent-blocked.cnf.raw.txt  p_cmax-n1010-m4-mchess16-mixed-45percent-blocked.cnf.raw.txt  p_cmax-n1010-m50-mchess16-mixed-45percent-blocked.cnf.raw.txt  p_cmax-n1010-m500-mchess16-mixed-45percent-blocked.cnf.raw.txt  p_cmax-n1010-m7-mchess16-mixed-45percent-blocked.cnf.raw.txt  p_cmax-n10172-m10-par32-4.shuffled.cnf.raw.txt  p_cmax-n10172-m1000-par32-4.shuffled.cnf.raw.txt  p_cmax-n10172-m2000-par32-4.shuffled.cnf.raw.txt  p_cmax-n10172-m3-par32-4.shuffled.cnf.raw.txt  p_cmax-n10172-m30-par32-4.shuffled.cnf.raw.txt  p_cmax-n10172-m5-par32-4.shuffled.cnf.raw.txt  p_cmax-n1020-m100-3col120_5_2.shuffled.cnf.raw.txt  p_cmax-n1020-m300-3col120_5_2.shuffled.cnf.raw.txt  p_cmax-n1020-m50-3col120_5_2.shuffled.cnf.raw.txt  p_cmax-n1020-m7-3col120_5_2.shuffled.cnf.raw.txt  p_cmax-n10325-m10-div-mitern174.cnf.raw.txt  p_cmax-n10325-m100-div-mitern174.cnf.raw.txt  p_cmax-n10325-m1000-div-mitern174.cnf.raw.txt  (+5376 more)
src/: lib.rs  main.rs  sat_benchmark_generator.py
(+9658 files in other folders)
